# hypersigilry

hypersigilry/: Cargo.toml  readme.md
hypersigilry/chakras/: anahata.rs
hypersigilry/hypersigils/: astaroth.rs  coven_sigil.rs  qliphothic_star copy.rs
hypersigilry/sacred-geometry/: flower_of_life.rs  metatron_cube.rs
hypersigilry/wips/: metatron_cube.rs  thelemic_star.rs
